feat: add Stripe integration and first endpoint layer; fix service layer bugs - Integrates Stripe for payment processing - Implements the first endpoint layer for handling transactions - Fixes bugs in the service layer to improve stability